--- a/StripeAppPrototype/Views/Customer/AddPaymentMethod.cshtml
+++ b/StripeAppPrototype/Views/Customer/AddPaymentMethod.cshtml
@@ -36,7 +36,7 @@
                 <span asp-validation-for="Description"></span>  
             </label>
         </div>
-        <button type="submit" class="btn btn-primary">Donate</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
         <div class="outcome">
             <div class="error"></div>
         </div>
