--- a/StripeAppPrototype/Views/Customer/AddPaymentMethod.cshtml
+++ b/StripeAppPrototype/Views/Customer/AddPaymentMethod.cshtml
@@ -7,12 +7,13 @@
 
 <div class="payment">
     <form action="/Customer/AddPaymentMethod" method="post" id="payment-form">
-        <input type="hidden" asp-for="StripePublishableKey"/>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="StripePublishableKey" />
         <div class="group">
             <label>
                 <span>Email</span>
                 <input asp-for="Email" class="field" />
-                <span asp-validation-for="Email"></span>  
+                <span asp-validation-for="Email"></span>
             </label>
             <label>
                 <span>Card number</span>
@@ -33,7 +34,7 @@
             <label>
                 <span>Description</span>
                 <input asp-for="Description" class="field" />
-                <span asp-validation-for="Description"></span>  
+                <span asp-validation-for="Description"></span>
             </label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
